# builder-windows

./: CLAUDE.md  Cargo.toml  README.md
src/: azure.rs  config.rs  lib.rs  main.rs  worker.rs
src/package/: windows.rs
src/publish/: mod.rs  msstore.rs
src/queue/: job.rs
src/signing/: windows.rs
src/ws/: messages.rs
