[package]
name = "perry-ship-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
futures = "0.3"
hex = "0.4"
hostname = "0.4"
image = "0.25"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
zip = "2"
pelite = "0.10"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
